multi channel heater (pls work)
